test/driver/diag_min_margin_width.2.stderr
<source>:6:7: error: cannot add 'i32' to 'bool'
      6 |     5 + true;
        |     ~ ^ ~~~~
